@startuml
skinparam classAttributeIconSize 0

package sparta.clack.endpoint {
/'
    Endpoint <|-- Client
    Endpoint <|-- Server

    abstract class Endpoint {
        + {static} int DEFAULT_PORT
        - int port
        - message.Message messageReceived
        - message.Message messageToSend
        - boolean isClosed
        + void receiveMessage()
        + void sendMessage()
        + int getPort()
        + void start()
        + {abstract} boolean equals(Object)
        + {abstract} int hashCode()
        + {abstract} String toString()
    }
'/
    class Client {
        + {static} DEFAULT_SERVER_NAME : String
        + {static} DEFAULT_SERVER_PORT : int
        - username : String <<final>>
        - serverName : String <<final>>
        - serverPort : int <<final>>
        - messageToSend : Message
        - messageReceived : Message
        + Client(username, serverName, serverPort)
        + Client(username, serverName)
        + Client(username, serverPort)
        + Client(username)
        + start() : void
        + readUserInput() : Message
        + sendMessage() : void
        + receiveMessage() : void
        + printMessage() : void
        + getUsername() : String
        + getServerName() : String
        + toString() : String
    }

    class sparta.clack.endpoint.Server {
        + Server(port)
        + Server()
        + int hashCode()
        + boolean equals()
        + String toString()
    }
}
@enduml